--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello123
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Example
+    </title>
+    <link href='../assets/style.css' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+
+    <header class="site-header">
+      <h1 class="site-title" aria-label="사이트 제목">Turtle Ipsum</h1>
+      <h2 class="site-subtitle" aria-label="사이트 부제목">The World's Premier Turtle Fan Club</h2>
+    </header>
+
+    <main>
+        <nav class="main-nav" aria-label="메인 헤더">
+            <h3 class="nav-header">Resources</h3>
+            <ul class="nav-list">
+                <li class="nav-item nav-item-bull"><a href="https://www.youtube.com/watch?v=CMNry4PE93Y">"I like turtles"</a></p>
+                <li class="nav-item nav-item-bull"><a href="https://en.wikipedia.org/wiki/Turtle">Basic Turtle Info</a></p>
+                <li class="nav-item nav-item-bull"><a href="https://en.wikipedia.org/wiki/Turtles_(chocolate)">Chocolate Turtles</a></p>
+            </ul>
+        </nav>
+
+        <div class="main-content" aria-label="메인 내용">
+        <div>
+            <h3 aria-label="페이지 제목" class="page-title">Welcome to Turtle Ipsum. 
+                <a href="">Click here</a> to learn more.
+            </h3>
+            <p class="article-text">
+            Turtle ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </p>
+        </div>
+        <div>
+            <h3>Put Image</h3>
+            <img src="" alt="아무 이미지나 넣었습니다."/>
+        </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-section" aria-label="푸터 1">
+        <button aria-label="SignUp" class="button">Sign up for turtle news</button>
+      </div>
+      <div class="footer-section" aria-label="푸터 2">
+        <h3 class="nav-header footer-title">
+          Internal Pages
+        </h3>
+        <nav class="nav-list">
+          <li class="nav-item nav-item-bull"><a href="../">Index</a></li>
+          <li class="nav-item nav-item-bull"><a href="../semantic">Semantic Example</a></li>
+        </nav>
+      </div>
+      <p class="footer-copyright">&copy; 2016 Instrument</span>
+    </footer>
+
+  </body>
+</html>
