--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <header class="site-header">
-      <h1 class="site-title" aria-label="사이트 제목">Turtle Ipsum</h1>
+      <h1 class="site-title" aria-label="사이트 제목">터틀터틀</h1>
       <h2 class="site-subtitle" aria-label="사이트 부제목">The World's Premier Turtle Fan Club</h2>
     </header>
 
