--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Example
+      Example 0920
     </title>
     <link href='../assets/style.css' rel='stylesheet' type='text/css'>
   </head>
