--- a/terrarium_dragdrop_api/index.html
+++ b/terrarium_dragdrop_api/index.html
@@ -11,48 +11,48 @@
     <div id="page">
         <div id="left-container" class="container">
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant1" src="./images/plant1.png" />
+                <img class="plant" alt="plant" id="plant1" draggable src="../images/plant1.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant2" src="./images/plant2.png" />
+                <img class="plant" alt="plant" id="plant2" draggable src="../images/plant2.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant3" src="./images/plant3.png" />
+                <img class="plant" alt="plant" id="plant3" draggable src="../images/plant3.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant4" src="./images/plant4.png" />
+                <img class="plant" alt="plant" id="plant4" draggable src="../images/plant4.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant5" src="./images/plant5.png" />
+                <img class="plant" alt="plant" id="plant5" draggable src="../images/plant5.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant6" src="./images/plant6.png" />
+                <img class="plant" alt="plant" id="plant6" draggable src="../images/plant6.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant7" src="./images/plant7.png" />
+                <img class="plant" alt="plant" id="plant7" draggable src="../images/plant7.png" />
             </div>
         </div>
         <div id="right-container" class="container">
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
+                <img class="plant" alt="plant" id="plant8" draggable src="../images/plant8.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
+                <img class="plant" alt="plant" id="plant9" draggable src="../images/plant9.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant10" src="./images/plant10.png" />
+                <img class="plant" alt="plant" id="plant10" draggable src="../images/plant10.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant11" src="./images/plant11.png" />
+                <img class="plant" alt="plant" id="plant11" draggable src="../images/plant11.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant12" src="./images/plant12.png" />
+                <img class="plant" alt="plant" id="plant12" draggable src="../images/plant12.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant13" src="./images/plant13.png" />
+                <img class="plant" alt="plant" id="plant13" draggable src="../images/plant13.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
+                <img class="plant" alt="plant" id="plant14" draggable src="../images/plant14.png" />
             </div>
         </div>
     </div>
