1031-기초웹개발론 과제

--- a/home-week6/index.html
+++ b/home-week6/index.html
@@ -65,6 +65,7 @@
         <div class="dirt"></div>
         <div class="jar-bottom"></div>
     </div>
-<script src="/terrarium.js"></script>
+    <script src="./terrarium.js"></script>
+
 </body>
 </html>
